--- a/data/experiment_configurations/config_scenario1_linear.json
+++ b/data/experiment_configurations/config_scenario1_linear.json
@@ -1,6 +1,6 @@
 {
-  "name": "RL_topological_flexibility_cyclic",
-  "model_type": "molfomer",
+  "name": "RL_topological_flexibility_linear",
+  "model_type": "mol2mol",
   "model_path": "/<your_path>/generative/model/path",
   "input_sequence": "?|?|N[C@@H](C)C(=O)|?|N[C@@H](C)C(=O)|N[C@@H](C)C(=O)|N[C@@H](C)C(=O)|N[C@@H](C)C(=O)|?",
   "learning_configuration": {
@@ -11,7 +11,7 @@
     "scoring_components":[{
       "name": "maximum_ring_size",
       "weight": 1,
-      "specific_parameters": {"transformation" : {"transformation_type": "double_sigmoid", "low": 12, "high":30, "coef_div": 10, "coef_si":20, "coef_se":20}}
+      "specific_parameters": {"transformation" : {"transformation_type": "reverse_sigmoid", "low": 12, "high":50, "k": 0.4}}
     }
     ]
   },
@@ -27,5 +27,3 @@
     "penalty": 0.5
   }
 }
-
-
