--- a/data/experiment_configurations/config_sampling.json
+++ b/data/experiment_configurations/config_sampling.json
@@ -1,9 +1,9 @@
 {
   "model_type": "mol2mol",
-  "model_path": "/<your_path>/examples/models/generative_model.ckpt",
-  "results_output": "/<your_path>/results/output.csv",
-  "input_sequences_path": "/<your_path>/data/input.csv",
-  "batch_size": 1,
+  "model_path": "./data/models/generative_model.ckpt",
+  "results_output": "./data/results/output.csv",
+  "input_sequences_path": "./data/test_data/test_data_small.csv",
+  "batch_size": 128,
   "num_samples": 1000,
   "beam_size": 1000,
   "run_type": "sampling"
