--- a/pepinvent_env.yml
+++ b/pepinvent_env.yml
@@ -1,8 +1,6 @@
 name: pepinvent
 channels:
   - openeye
-  - nvidia
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -32,7 +30,6 @@ dependencies:
   - click=8.1.7
   - conda-pack=0.6.0
   - cryptography=39.0.1
-  - cudatoolkit=11.1.74
   - dacite=1.8.0
   - dataclasses=0.8
   - dill=0.3.6
@@ -167,7 +164,6 @@ dependencies:
       - botocore==1.34.111
       - brotli==1.1.0
       - cachedmethods==0.1.4
-      - cgrtools==4.1.35
       - cli-exit-tools==1.2.6
       - cloudpickle==3.0.0
       - dask==2023.5.0
@@ -179,9 +175,6 @@ dependencies:
       - metaflow==2.11.16
       - multivolumefile==0.2.3
       - numpy==1.24.4
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
       - partd==1.4.1
       - psutil==5.9.8
       - py7zr==0.18.12
@@ -198,7 +191,7 @@ dependencies:
       - swifter==1.4.0
       - texttable==1.7.0
       - toolz==0.12.1
-      - torch==1.8.1+cu111
+      - torch
       - wrapt==1.16.0
       - wrapt-timeout-decorator==1.5.1
       - xgboost==1.5.0
