add openbabel to deps for representation notebook

--- a/pepinvent_env.yml
+++ b/pepinvent_env.yml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - openbabel
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - abseil-cpp=20211102.0
